# canute-ui

./: .gitignore  .travis.yml  99-umount.rules  BUILD.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  canute-ui  canute_ui  config.rc  config.rc.in  config.rc.travis  explorer.py  fix  fstab  lint  load_from_usb.py  main.py  media.py  menu-wireframe.ep  pylintrc  rc.local  requirements-pi.txt  requirements.txt  run.sh  spec.md  start_ui.sh  stop_ui.sh  test  test_mode.sh  umount.sh  update_ui.py
.cargo/: config
books/: A Study in Scarlet.htm  AESOP'S FABLES.htm  A_balance_between_technology_and_Braille_Adding_Value_and_Creating_a_Love_of_Reading.BRF  A_course_Designed_To_Teach_Literacy_Using_Braille.brf  About NCBI WORD.DOCX  Alignment_of_Braille_and_Print_English_for_Learning_and_Instruction.brf  Andersen's Fairy Tales.htm  Animal_Sound_Cards_Project.brf  BANZAT_building_better_braille.brf  Braille_Music_and_UEB_in_Practice_in_the_UK.brf  Cracking_the_Code.brf  Dracula.htm  Fall of the House of Usher.htm  Implementation_of_UEB_in_Canada.brf  Implementing_UEB_in_the_UK.brf  Literacy_Instruction_and_Assistive_Technology.BRF  Mangold_Basic_Braille_Program.brf  Moon_Alphabet_as_Point_Symbols_in_Tactile_Diagrams.brf  NCBI News Summer 2015 Text for Braille.doc  NCBI News Summer 2015 Text for Braille.txt  NCBI Services V5.docx  Personal_Perspectives_on_Unified_English_Braille_for_Mathematics.brf  Rime of the Ancient Mariner.htm  Tactile_Access_to_Graphics_in_Higher_Education.brf  The Jungle Book.htm  The_Orbit_Reader_20.brf  The_Survival_Of_Braille_Is_In_The_Balance.brf  The_iBraille_Challenge.brf  UIB_-_Irish_Braille_in_Progress.brf  Understanding_and_Reducing_Inaccuracy_in_Electronically_Generated_Braille.brf  Unified_english_braille_and_literacy_development_in_English-speaking_Africa.brf  Your_Personal_and_Confidential_Information_in_Braille.brf  about ncbi word g1.pef  about ncbi word g2.pef  canute.@@__canute_manual__@@.txt  canute.UIB_-_Irish_Braille_in_Progress.brf.txt  g2 A Study in Scarlet.pef  g2 AESOP'S FABLES.pef  g2 Andersen's Fairy Tales.pef  g2 Dracula.pef  (+20 more)
doc/: Makefile  bookfile_list.rst  button_config  buttons_config  conf.py  driver.rst  hardware.rst  index.rst  load_book.rst  load_from_usb.rst  make.bat  pageable.rst  ui.rst  utility.rst
src/: lib.rs
test/: test_actions.py  test_bookfile_list.py  test_convert.py  test_ui.py
test-books/: Braille_Music_and_UEB_in_Practice_brf.brf  Teach_Literacy_Using_Braille_brf.brf  demo_mk8_csun_pef.pef  hitch-hikers_guide_to_maths_ueb_brf.brf  pef_test.pef
tests/: test_actions.py  test_book.py  test_book_file.py  test_bookfile_list.py  test_braille.py  test_convert.py  test_driver_emulated.py  test_driver_pi.py  test_utility.py  util.py  utility.py
ui/: .gitignore  __init__.py  actions.py  argparser.py  book.py  book_file.py  bookfile_list.py  braille.py  button_bindings.py  buttons.py  buttons_config.py  canute_help.txt  cleaning_and_testing.py  comms_codes.py  config-test.rc  config.rc  config.yaml  config_loader.py  convert.py  dev-requirements  display.py  driver.py  driver_both.py  driver_dummy.py  driver_emulated.py  driver_pi.py  gui_display.py  hardware.py  hardware_emulator.py  (+30 more)
(+87 files in other folders)
